@@ -1,5 +1,6 @@
 v7.0
 -----
+: Updated wishlist code to work with the new page layout and design
 
 
 v6.9
